# fufan-chat-api-example

./: Fufan Chat API 项目架构分析.md  SSE与WebSocket技术详解.md  TP_NUM_C_BUFS_SOLUTION.md  fufanrag 模块架构分析.md  fufanrag_RAG框架模块化设计与管道流程分析.md  init_faiss_sync.py  init_faiss_vs.py  init_private.py  main.py  note.md  pyproject.toml  requirements.txt.bak  start_service.bat  startup.py  test_import.py  test_init_vs_logic.py  test_init_vs_simple.py  test_open_filename.py  test_open_filename_solution.py  test_pdfminer.py  test_simple.py  test_simple_import.py  test_simplified.py  test_startup.py  会话管理机制详解.md  会话管理系统设计与集成方案.md  完整RAG知识库架构设计.md  服务启动与前端访问指南.md
configs/: kb_config.py  model_config.py
docs/: Faiss向量数据库初始化流程详解.md  Tokenizer与LLM模型关系深度解析.md  模型下载与验证脚本文档.md
document_loaders/: pdfloader.py
knowledge_base/private/vector_stores/: index.faiss  index.pkl
knowledge_base/wiki/vector_stores/: index.faiss  index.pkl
model_download_scripts/: download_all_models.py
server/: utils.py
server/knowledge_base/: init_faiss_sync.py  init_vs.py  init_vs_v2.py
